AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = sprint

sprint_SOURCES = AIRCHK.f ANALYT.f ANLACT.f ANLREP.f AZMFIL.f BACKREC.f \
                 BEAMIN.f BLDDES.f BLHED.f BLKDAT.f CARTAP.f CEDLOG.f \
                 CEDUTIL.f CHKMSG.f COMBIN.f CONFLD.f CRTOUT.f \
                 CRTSET.f CRTTCP.f DOFILT.f DORSWP.f DORVOL.f DUMBUF.f \
                 FEETCL.f FFSCL.f FILLAZ.f FILTER.f FLAT.f FXTABLE.f \
                 GENAZM.f GETNAME.f HEDSET.f HEDSHF.f IGET16.f IGET8.f \
                 IGETAI.f IGETCP.f IGETCP2.f IGTDAT.f IMHSUM.f INHSUM.f \
                 INITAL.f INITVOL.f INPFIL.f INTCHK.f INTERP.f IPKDAT.f \
                 IPUT16.f IPUT8.f IPUTAI.f IPUTCP.f IQUAD.f ITPFLD.f \
                 ITPFLDC.f IVVPCK.f IVVUNP.f KARDIN.f LL2XY.f LL2XYDRV.f \
                 LOADBMS.f LOCATE.f LOCATEC.f METHOD.f MTHSUM.f OUTFIL.f \
                 OUTPCK.f PROFIL.f RADAR.f RANF.f RAYIN.f RDRYDK.f RITER.f \
                 RNGFIL.f RPNCAR.f RSCART.f SCNEND.f SCNSET.f SETVOL.f \
                 SHILBL.f SHIRBL.f SINSRT.f SKPFFVOL.f SKPVOL.f \
                 STRID.f SWAPEM.f SWAPEMC.f TAPOUT.f \
                 TPQERX.f TRPARVOL.f TRPD.f TRPPPI.f TRPVOL.f \
                 UFCART.f UFCHARS.f UFNCAR.f UNCODE.f VERSOUT.f VUNF.f \
                 WRRYDK.f gbytes.f i1mach.f sbytes.f \
                 CCOSIN.c CDATE.c CINITCOS.c COUT.c SUNFOR.c assemblebeam.c \
                 char_test.c fbyt2flt.c fbyt2int.c find_ryib.c \
                 gzip.c intrinsics.c logic32.c myio.c proc_full.c \
                 rdbeam.c rdbeam2.c read_beam.c read_begin.c \
                 read_blocks.c right_rad.c trap_signals.c twbyt2int.c \
                 cedric.h  dorade.h \
                 SPRINT.INC



